Change icon for the application, and also changed what serial port name shows up in the firmware screen below the combo box

--- a/qgroundcontrol.rc
+++ b/qgroundcontrol.rc
@@ -1,1 +1,1 @@
-IDI_ICON1               ICON    DISCARDABLE     "files/images/icons/apmplanner.ico"
+IDI_ICON1               ICON    DISCARDABLE     "files/APMIcons/ap_rc.ico"
