Linux Installer - removed en_au language specifier

--- a/scripts/debian/apmplanner2.desktop
+++ b/scripts/debian/apmplanner2.desktop
@@ -7,4 +7,4 @@ Exec=apmplanner2
 Terminal=false
 Categories=Education;Robotics;
 Comment=A UAV Ground Station
-Name[en_AU]=apmplanner2
+Name=apmplanner2
