Linux Build: Updates to scripts

--- a/scripts/debian/apmplanner2.desktop
+++ b/scripts/debian/apmplanner2.desktop
@@ -8,3 +8,5 @@ Terminal=false
 Categories=Education;Robotics;
 Comment=A UAV Ground Station
 Name=apmplanner2
+Icon=/usr/share/apmplanner2/files/APMIcons/ap_rc.png
+
