Linux Installer: Fixed typo in package description

--- a/scripts/debian/control
+++ b/scripts/debian/control
@@ -14,5 +14,5 @@ Description: Ground station software for autonomous vehicles.
  Includes support for the APM and PX4 based controllers.
  If installing for the first time use "sudo dpkg -i apmplanner-XXX.deb", then "sudo apt-get install -f" and "sudo dpkg -i apmplanner-XXX.deb".
  If upgrading use "sudo dpkg -i apmplanner-XXX.deb".
- If uninstalling use "sudo dpkg -r apmplanner".
+ If uninstalling use "sudo dpkg -r apmplanner2".
 
