--- a/scripts/debian/control
+++ b/scripts/debian/control
@@ -1,13 +1,12 @@
 Package: apmplanner2
-Source: apmplanner
-Version: 20131103
+Version: 2:0.0-RC1
 Maintainer: APM Planner Developers <stephen_dade@hotmail.com>
 Installed-Size: 92263
 Section: science
 Priority: extra
 Homepage: https://github.com/diydrones/apm_planner
 Architecture: i386
-Depends: libc6 (>= 2.3.6-6~), libc6 (>= 2.15), libflite1, libgcc1 (>= 1:4.1.1), libgl1-mesa-glx | libgl1, libopenscenegraph80, libopenthreads14, libqt4-declarative (>= 4:4.7.0~rc1), libqt4-network (>= 4:4.6.1), libqt4-opengl (>= 4:4.5.3), libqt4-sql (>= 4:4.5.3), libqt4-svg (>= 4:4.5.3), libqt4-xml (>= 4:4.5.3), libqtcore4 (>= 4:4.8.0), libqtgui4 (>= 4:4.6.2), libqtwebkit4, libsdl1.2debian (>= 1.2.11), libssl1.0.0 (>= 1.0.0), libstdc++6 (>= 4.4.0)
+Depends: libc6 (>= 2.3.6-6~), libc6 (>= 2.15), libflite1, libgcc1 (>= 1:4.1.1), libgl1-mesa-glx | libgl1, libopenscenegraph80, libopenthreads14, libqt4-declarative (>= 4:4.7.0~rc1), libqt4-network (>= 4:4.6.1), libqt4-opengl (>= 4:4.5.3), libqt4-sql (>= 4:4.5.3), libqt4-svg (>= 4:4.5.3), libqt4-xml (>= 4:4.5.3), libqtcore4 (>= 4:4.8.0), libqtgui4 (>= 4:4.6.2), libqtwebkit4, libsdl1.2debian (>= 1.2.11), libssl1.0.0 (>= 1.0.0), libstdc++6 (>= 4.4.0), adduser
 Description: Ground station software for autonomous vehicles.
  A GUI ground control station for autonomous vehicles 
  using the MAVLink protocol.
@@ -15,4 +14,5 @@ Description: Ground station software for autonomous vehicles.
  If installing for the first time use "sudo dpkg -i apmplanner-XXX.deb", then "sudo apt-get install -f" and "sudo dpkg -i apmplanner-XXX.deb".
  If upgrading use "sudo dpkg -i apmplanner-XXX.deb".
  If uninstalling use "sudo dpkg -r apmplanner2".
+ After installing, you may need to log out and log in again to refresh the user groups.
 
