Linux: Forced usage of libudev for serial ports. Also minor build fixes

--- a/scripts/debian/control
+++ b/scripts/debian/control
@@ -1,6 +1,6 @@
 Package: apmplanner2
 Source: apmplanner
-Version: 20131103
+Version: VERSION
 Maintainer: APM Planner Developers <stephen_dade@hotmail.com>
 Installed-Size: 92263
 Section: science
